tests/primary_loc/primary_loc.exp
Error ------------------------------------------------------------------------------------------------------ test.js:1:1

Suppression is missing a code. Please update this suppression to use an error code: `$FlowFixMe[<CODE>]` [InferError]

   1| //$FlowFixMe (unused)
      ^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:5:3

Cannot call `f` with `"asdf"` bound to the first parameter because string [1] is incompatible with number [2].
[incompatible-type]

   test.js:5:3
   5| f("asdf");
        ^^^^^^ [1]

References:
   test.js:2:21
   2| declare function f (number) : string;
                          ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:1

Suppression is missing a code. Please update this suppression to use an error code: `$FlowFixMe[<CODE>]` [InferError]

   7| //$FlowFixMe (unused)
      ^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:10:2

Cannot cast `3` to `T` because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:10:2
   10| (3 : T);
        ^ [1]

References:
   test.js:10:6
   10| (3 : T);
            ^ [2]



Found 4 errors
